apps/kopia/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kopia
  namespace: kopia
  labels:
    app.kubernetes.io/name: "kopia"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: kopia
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "kopia"
    spec:
      restartPolicy: Always
      containers:
        - name: kopia
          image: kopia/kopia:latest # kustomize.yaml replacements
          imagePullPolicy: IfNotPresent
          args:
            - "server"
            - "start"
            - "--address=http://0.0.0.0:8080"
            - "--insecure"
            - "--without-password"
          ports:
            - name: main
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: backup-docs
              mountPath: /Volumes/Documents # Mimics OSX path
              readOnly: true
            - name: config
              mountPath: /app/config
              readOnly: false
            - name: cache
              mountPath: /cache
              readOnly: false
            - name: service-account-credentials-volume
              mountPath: /app/gcp
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: backup-docs
          persistentVolumeClaim:
            claimName: unas-docs-ro-claim
        - name: config
          emptyDir:
            sizeLimit: 5Gi
        - name: cache
          emptyDir:
            sizeLimit: 5Gi
        - name: kopia-config
          configMap:
            name: kopia-config
        - name: service-account-credentials-volume
          secret:
            secretName: credentials-secret
            items:
            - key: sa_json
              path: credentials.json
