apps/kopia/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopia-service
spec:
  selector:
    app.kubernetes.io/name: kopia
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
