apps/kopia/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - backups.colinbruner.com
    secretName: kopia-tls
  rules:
  - host: backups.colinbruner.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kopia
            port:
              number: 443
